# neo-c-sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  neoc.pc.in
include/neoc/: neo_constants.h  neoc_error.h
include/neoc/contract/: contract_management.h  contract_parameter.h  crypto_lib.h  ledger_contract.h  neoc_uri.h  nns_name.h  oracle_contract.h  policy_contract.h  std_lib.h
include/neoc/crypto/: ecdsa_signature.h  hash.h  neoc_hash.h
include/neoc/protocol/: rpc_client.h
include/neoc/protocol/core/response/: contract_nef.h  contract_state.h  diagnostics.h  express_contract_state.h  invocation_result.h  neo_get_version.h
include/neoc/protocol/response/: contract_nef.h  contract_state.h  diagnostics.h  express_contract_state.h  invocation_result.h  neo_block.h  notification.h  transaction_attribute.h
include/neoc/serialization/: binary_reader.h  binary_writer.h  neo_serializable.h
include/neoc/types/: contract_parameter.h  contract_parameter_type.h
src/: neo_constants.c  neoc.c
src/contract/: contract_management.c  crypto_lib.c  ledger_contract.c  neoc_name_service.c  neoc_uri.c  nns_name.c  non_fungible_token.c  oracle_contract.c  policy_contract.c  smart_contract.c  std_lib.c
src/crypto/: bip32.c  ec_key_pair.c  ecdsasignature.c  neoc_hash.c  nep2.c  sign.c
src/protocol/: rpc_client.c
src/protocol/core/response/: diagnostics.c  neo_get_version.c  transaction.c
src/protocol/response/: express_contract_state.c
src/serialization/: binary_reader.c  binary_writer.c
src/transaction/: transaction.c  witness.c
src/types/: contract_parameter.c  contract_parameter_type.c  neoc_hash256.c  neoc_vm_state_type_alt.c
src/utils/: url_session.c  url_session_nocurl.c
src/wallet/: account.c  nep6.c  wallet.c
src/wallet/nep6/: nep6_wallet.c
tests/: CMakeLists.txt  test_account_comprehensive.c  test_binary_reader.c  test_binary_writer.c  test_integration.c  test_integration_comprehensive.c  test_memory_comprehensive.c  test_neo_constants.c  test_sign.c
tests/unit/: CMakeLists.txt
tests/unit/contract/: test_contract_management.c  test_crypto_lib.c  test_ledger_contract.c  test_neo_uri.c  test_nns_name.c  test_oracle_contract.c  test_policy_contract.c  test_std_lib.c
tests/unit/crypto/: test_ec_key_pair.c  test_nep2.c  test_wif.c
tests/unit/helpers/: test_json.c  test_mock_url_session.c
tests/unit/protocol/core/: test_neo_get_version.c
tests/unit/transaction/: test_serializable_transaction.c  test_transaction_builder.c
tests/unit/wallet/: test_nep6_wallet_struct.c
